[project]
name = "project1-mirokhin-jury-dpo-43"
version = "0.1.0"
description = "Treasure labyrinth"
authors = [
    {name = "Jury Mirokhin"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "labyrinth_game" }
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"